<resources>
    <string name="app_name">MovieApplication</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generic_error">Oops! Something went wrong,\nPlease try again later...</string>
    <string name="book_the_movie_button">Book the Movie</string>
    <string name="rating_header">Rating</string>
    <string name="overview_header">Overview</string>
    <string name="votes_header">Votes</string>
    <string name="total_votes">Total Votes</string>

    <plurals name="duration">
        <item quantity="one">%d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>


</resources>
